--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -2,9 +2,9 @@ compile.on.save=true
 do.depend=false
 do.jar=true
 do.jlink=false
-file.reference.jcalendar-1.4.jar=E:\\2022\\ricardo\\tello\\archivos\\src\\lib\\jcalendar-1.4.jar
-file.reference.mysql-connector-java-5.1.47.jar=E:\\2022\\ricardo\\tello\\archivos\\src\\lib\\mysql-connector-java-5.1.47.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Fernando\\Documents\\NetBeansProjects\\SistemaArchivo\\src\\lib\\jcalendar-1.4.jar
+file.reference.mysql-connector-java-5.1.47.jar=C:\\Users\\Fernando\\Documents\\NetBeansProjects\\SistemaArchivo\\src\\lib\\mysql-connector-java-5.1.47.jar
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Ricardo\\AppData\\Roaming\\NetBeans\\13\\build.properties
+user.properties.file=C:\\Users\\Fernando\\AppData\\Roaming\\NetBeans\\13\\build.properties
